Open required internal JDK packages for illegal reflective access
- Illegal reflective access is denied by default on JDK 16, and JDK 17 requires specific add-opens (you cannot permit illegal access globally).
- Java 17 enforces https://openjdk.java.net/jeps/403 which strongly encapsulates internals per #9469
- We appear to depend on a lot of such reflection due to use of the Cloning/Cloner library and some internal to Hibernate 3.6
- These were just discovered through running automated tests, plus starting server and clicking around various functions and looking at what breaks where.
- There are possibly some others, however this seemed sufficient to pass all the tests and some adhoc usage

Defined the required opens alongside the installers; which is where they mainly need to live. We also, unfortunately, need these when running server-based tests
- an attempt is made here to include or exclude them based on whether the tests are for agent or server code, although this isn't easily to discover, so by default we consider modules to run on the server, and only classify agents which seem to require less opened modules
- they also are needed for Rails RSpec tests which start a server
- Also workaround issue with use of selenium-webdriver 3.142.17 and childprocess on JRuby with Java 17. It's dying on Windows with `illegal access getting field 'private final java.io.FileDescriptor sun.nio.ch.FileChannelImpl.fd' : class org.jruby.java.invokers.InstanceFieldGetter cannot access class sun.nio.ch.FileChannelImpl (in module java.base) because module java.base does not export sun.nio.ch to unnamed module @2f465398`

Let's try following the warning and see how far we go. The Jasmine Gem is going to wrap Node Jasmine soon-enough, so this will probably become moot.

--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,10 @@
  * limitations under the License.
  */
 
-
 import com.github.jk1.license.filter.LicenseBundleNormalizer
 import com.github.jk1.license.render.JsonReportRenderer
 import com.github.jk1.license.task.ReportTask
+import com.thoughtworks.go.build.InstallerType
 import groovy.io.FileType
 import nl.javadude.gradle.plugins.license.License
 import org.apache.tools.ant.filters.FixCrLfFilter
@@ -156,8 +156,6 @@ rootProject.ext.distVersion = DIST_VERSION
 rootProject.ext.fullVersion = DIST_VERSION ? "${GO_VERSION}-${DIST_VERSION}" : GO_VERSION
 rootProject.ext.gitRevision = GIT_REVISION
 rootProject.ext.copyrightYear = Calendar.getInstance().get(Calendar.YEAR)
-
-project.ext.defaultJvmArgs = []
 
 project.ext.compilerOptions = [
   // source and target compatibility
@@ -535,7 +533,7 @@ subprojects {
     // fixup a tempdir that is predictable and we can clean it up later
     def tmpDir = project.file("${System.getProperty('java.io.tmpdir')}/gocd-tests/${new BigInteger(32, new SecureRandom()).toString(32)}")
     systemProperty 'java.io.tmpdir', tmpDir
-    jvmArgs += project.defaultJvmArgs
+    jvmArgs += testTask.project.name.startsWith("agent") ? InstallerType.agent.jvmModuleOpensArgs : InstallerType.server.jvmModuleOpensArgs
 
     doFirst {
       // workaround for https://github.com/unbroken-dome/gradle-testsets-plugin/issues/40
