Switch to use of Gradle Toolchains to allow Gradle JVM and test/compile JVM to vary, using Java 17 for compile+test JVM
- Gradle 6.x does not support Java 17; but we want to target it which toolchains allow us to do https://docs.gradle.org/current/userguide/toolchains.html
- In future this also allows us to use later Java version for Gradle, and earlier version for release if necessary
- source and target compatibility flags are not considered the best way to target JVM releases now using javac, the `release` flag is, which ensures the boot classpath is correct to avoid unintended usages of newer APIs: https://docs.gradle.org/current/userguide/building_java_projects.html#sec:java_cross_compilation
- Prevent auto-download of JVMs specified by toolchains. Ensure that user has control; and avoid mysteriously slow builds on build.gocd.org by failing fast. Requires `gocddev` build images `3.1.4`+ for JDK 17 onwards.

--- a/build.gradle
+++ b/build.gradle
@@ -160,8 +160,13 @@ rootProject.ext.copyrightYear = Calendar.getInstance().get(Calendar.YEAR)
 project.ext.defaultJvmArgs = []
 
 project.ext.compilerOptions = [
-  sourceCompatibility: 13,
-  targetCompatibility: 13,
+  // source and target compatibility
+  release: 13,
+]
+
+project.ext.toolchains = [
+  compilerVersion: 17,
+  testLauncherVersion: 17,
 ]
 
 project.ext.packaging = [
@@ -251,9 +256,9 @@ allprojects {
 
 idea {
   project {
-    jdkName = project.compilerOptions.targetCompatibility
-    targetBytecodeVersion = JavaVersion.toVersion(project.compilerOptions.targetCompatibility)
-    languageLevel = new IdeaLanguageLevel(project.compilerOptions.sourceCompatibility)
+    jdkName = project.toolchains.compilerVersion
+    targetBytecodeVersion = JavaVersion.toVersion(project.compilerOptions.release)
+    languageLevel = new IdeaLanguageLevel(project.compilerOptions.release)
   }
 }
 
@@ -400,8 +405,6 @@ subprojects {
       }
     }
 
-    sourceCompatibility = project.compilerOptions.sourceCompatibility
-    targetCompatibility = project.compilerOptions.targetCompatibility
     buildDir = "${projectDir}/target"
 
     configurations {
@@ -447,8 +450,8 @@ subprojects {
         'Go-Revision': project.gitRevision,
         'Implementation-Title': project.name,
         'Implementation-Version': project.version,
-        'Source-Compatibility': project.compilerOptions.sourceCompatibility,
-        'Target-Compatibility': project.compilerOptions.targetCompatibility
+        'Source-Compatibility': project.compilerOptions.release,
+        'Target-Compatibility': project.compilerOptions.release
       )
     }
 
@@ -488,6 +491,11 @@ subprojects {
     options.warnings = false
     options.encoding = "UTF-8"
     options.compilerArgs += '-Xlint:-deprecation'
+    options.release = project.compilerOptions.release
+
+    javaCompiler = javaToolchains.compilerFor {
+      languageVersion = JavaLanguageVersion.of(project.toolchains.compilerVersion)
+    }
   }
 
   project.afterEvaluate {
@@ -516,6 +524,10 @@ subprojects {
 //    outputs.upToDateWhen { false }
 
     testTask.useJUnitPlatform()
+    javaLauncher = javaToolchains.launcherFor {
+      languageVersion = JavaLanguageVersion.of(project.toolchains.testLauncherVersion)
+    }
+
     def allTestClasses
 
     maxParallelForks = project.hasProperty('maxParallelForks') ? project.maxParallelForks as int : 1
