--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.workers.max=4
 org.gradle.caching=true
+org.gradle.java.installations.auto-download=false
