--- a/installers/tanuki.gradle
+++ b/installers/tanuki.gradle
@@ -22,7 +22,7 @@ private File destFile(String url) {
 }
 
 task downloadTanukiDeltaPack(type: DownloadFile) {
-  def srcUrl = System.getenv("TANKUK_WRAPPER_URL") ?: "https://nexus.gocd.io/repository/s3-mirrors/local/tanuki/wrapper-delta-pack-${project.versions.tanuki}-st.tar.gz"
+  def srcUrl = System.getenv("TANUKI_WRAPPER_URL") ?: "https://nexus.gocd.io/repository/s3-mirrors/local/tanuki/wrapper-delta-pack-${project.versions.tanuki}-st.tar.gz"
   src srcUrl
   dest destFile(srcUrl)
   checksum '18625b1d009e0973fe066d12ab6ea3b956d7a25d9220966d763de601df28e3a5'
