Avoid running SCSS Lint with bundle exec to workaround Windows binstubs issues with later JRuby
RubyGems now generates binstubs with jruby.exe hardcoded. Previous it seemed to get RUBY from env, and use our custom bash script to re-launch JRuby. Don't really know why we were doing it this way, but it seemed to cause https://github.com/jruby/jruby/issues/6960

In any case, launching directly seems to work fine. The alternative is to disable on Windows, but avoiding `bundle exec` and relying on our JRuby configuration seems good enough until we can get rid of JRuby, and/or get rid of scss-lint which is deprecated anyway.

--- a/server/lint.gradle
+++ b/server/lint.gradle
@@ -27,7 +27,7 @@ task scssLint {
     project.jrubyexec {
       workingDir = project.railsRoot
 
-      args = ['-S', 'bundle', 'exec', 'scss-lint', "--config", 'scss-lint.yml', inputDir]
+      args = ['-S', 'scss-lint', "--config", 'scss-lint.yml', inputDir]
       maxHeapSize = '1g'
     }
 
