--- a/server/src/main/webapp/WEB-INF/rails/Gemfile
+++ b/server/src/main/webapp/WEB-INF/rails/Gemfile
@@ -22,7 +22,7 @@ group :development, :test do
   gem 'jasmine_selenium_runner'
 
   # make sure to `System.setProperty("jruby.runtime.arguments", "--debug")` before opening up pry
-  gem 'pry-debugger-jruby'
+  gem 'pry-debugger-jruby', platforms: :jruby
 end
 
 group :test do
