Replace eslint-loader with eslint-webpack-plugin
eslint-loader is deprecated, and sadly no longer works with modern ESLint. The plugin seems to work fine.
https://github.com/webpack-contrib/eslint-webpack-plugin

--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -75,9 +75,9 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.7",
     "eslint": "^8.6.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-webpack-plugin": "^2",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6",
     "fs-extra": "^10.0.0",
