--- a/build.gradle
+++ b/build.gradle
@@ -249,6 +249,12 @@ allprojects {
       url 'https://repo1.maven.org/maven2'
       metadataSources { artifact() }
     }
+    maven {
+      url "https://repository.apache.org/content/repositories/snapshots"
+      mavenContent {
+        snapshotsOnly()
+      }
+    }
   }
 }
 
