--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,7 +32,6 @@ description = 'GoCD Server'
 buildscript {
   repositories {
     mavenCentral()
-    maven { url 'https://jitpack.io' }
   }
 
   dependencies {
@@ -107,8 +106,14 @@ configurations {
     transitive = true
   }
 
-  compileClasspath.exclude(group: 'org.springframework', module: 'spring-support')
-  runtimeClasspath.exclude(group: 'org.springframework', module: 'spring-support')
+  compileClasspath {
+    exclude group: 'commons-lang', module: 'commons-lang'
+    exclude group: 'commons-collections', module: 'commons-collections'
+    exclude group: 'org.springframework', module: 'spring-support'
+  }
+  runtimeClasspath {
+    exclude group: 'org.springframework', module: 'spring-support'
+  }
   apiBase
   allApis
   spark
@@ -281,21 +286,31 @@ dependencies {
   implementation project.deps.aspectj
   implementation project.deps.aspectjWeaver
   implementation project.deps.urlrewrite
-  implementation(project.deps.velocity) {
-    exclude(module: 'commons-lang')
-    exclude(module: 'commons-collections')
-  }
-  implementation files("vendor/velocity-tools-view-${project.versions.velocityToolsView}.jar")
-  // old digester version required by velocity-tools-view
-  implementation project.deps.commonsDigester
 
-  // this is needed by velocity tools view
-  implementation project.deps.commonsLang
-  implementation project.deps.commonsCollections
+  implementation project.deps.velocity
+  constraints {
+    implementation(project.deps.commonsCollections) {
+      because 'used by both velocity/velocityToolsView, but out of date'
+    }
+    implementation(project.deps.commonsLang) {
+      because 'used by velocity, but out of date'
+    }
+  }
+
+  runtimeOnly project.deps.velocityToolsView
+  sharedTestRuntimeOnly project.deps.velocityToolsView
+  if (project.deps.velocityToolsView) {
+    // Transitive dependencies required only for velocityTools which does not publish a POM properly: https://velocity.apache.org/tools/devel/dependencies.html#VelocityView
+    // Also see https://github.com/apache/velocity-tools/blob/1.x/pom.xml
+    sharedTestRuntimeOnly project.deps.commonsCollections
+    sharedTestRuntimeOnly project.deps.commonsLang
+    runtimeOnly project.deps.commonsDigester
+    integrationTestRuntimeOnly project.deps.commonsDigester
+  }
+
   implementation project.deps.guava
   implementation project.deps.mail
   implementation project.deps.mailSmtp
-  implementation project.deps.objenesis
 
   implementation project.deps.slf4j
   implementation(project.deps.jgitServer) {
