Remove direct dependencies on objenesis
We only use this transitively, and we should control its dependency as such, with either global dependencyResolutions (current approach) or Gradle dependency constraints. This way it will naturally disappear from dependencies when

--- a/build.gradle
+++ b/build.gradle
@@ -624,6 +624,7 @@ subprojects {
       "com.fasterxml.jackson.core:jackson-databind"   : project.versions.jackson,
       "commons-beanutils:commons-beanutils"           : project.versions.commonsBeanutils,
       "org.apache.commons:commons-pool2"              : project.versions.commonsPool,
+      "org.objenesis:objenesis"                       : project.versions.objenesis,
     ]
 
 
