Unlock rails and sass-rails versions from Gemfile
We generally use dependabot, lockfiles and test automation to manage these updates, so no real need to lock these that I can see.

--- a/server/src/main/webapp/WEB-INF/rails/Gemfile
+++ b/server/src/main/webapp/WEB-INF/rails/Gemfile
@@ -1,8 +1,8 @@
 source 'https://rubygems.org'
 ruby '2.6.8'
 
-gem 'rails', '5.2.6'
-gem 'sass-rails', '5.1.0'
+gem 'rails'
+gem 'sass-rails'
 
 gem 'dynamic_form'
 
