--- a/spark/spark-base/build.gradle
+++ b/spark/spark-base/build.gradle
@@ -20,8 +20,9 @@ dependencies {
   api project(':common')
   api project(':server')
 
-  implementation project.deps.jackson
-  implementation project.deps.jacksonDatabind
+  implementation(platform(project.deps.jacksonBom))
+  implementation 'com.fasterxml.jackson.core:jackson-core'
+  implementation 'com.fasterxml.jackson.core:jackson-databind'
   implementation project.deps.springWeb
 
   api(project.deps.spark) {
