--- a/server/build.gradle
+++ b/server/build.gradle
@@ -863,9 +863,9 @@ task verifyWar(type: VerifyJarTask) {
         "httpmime-${project.versions.apacheHttpComponents}.jar",
         "istack-commons-runtime-3.0.7.jar",
         "j2objc-annotations-1.3.jar",
-        "jackson-annotations-${project.versions.jackson}.jar",
-        "jackson-core-${project.versions.jackson}.jar",
-        "jackson-databind-${project.versions.jackson}.jar",
+        "jackson-annotations-2.13.2.jar",
+        "jackson-core-2.13.2.jar",
+        "jackson-databind-2.13.2.2.jar",
         "jakarta.activation-2.0.1.jar",
         "javassist-${project.versions.javaAssist}.jar",
         "javax.activation-api-1.2.0.jar",
