--- a/db-support/db-support-postgresql/build.gradle
+++ b/db-support/db-support-postgresql/build.gradle
@@ -14,20 +14,25 @@
  * limitations under the License.
  */
 
+configurations.all {
+  // Test containers depends on legacy junit, see https://github.com/testcontainers/testcontainers-java/issues/970
+  exclude group: 'junit'
+}
+
 dependencies {
-    implementation project.deps.postgresql
-    api project(':db-support:db-support-base')
+  implementation project.deps.postgresql
+  api project(':db-support:db-support-base')
 
-    annotationProcessor project.deps.lombok
+  annotationProcessor project.deps.lombok
 
-    testImplementation project(path: ':db-support:db-migration')
-    testImplementation project(path: ':db-support:db-migration', configuration: 'testOutput')
+  testImplementation project(path: ':db-support:db-migration')
+  testImplementation project(path: ':db-support:db-migration', configuration: 'testOutput')
 
-    testImplementation project.deps.testcontainersJunit
-    testImplementation project.deps.testcontainers
-    testImplementation project.deps.testcontainersPostgresql
+  testImplementation project.deps.testcontainers
+  testImplementation project.deps.testcontainersJunit
+  testImplementation project.deps.testcontainersPostgresql
 
-    testImplementation project.deps.assertJ
-    testImplementation project.deps.junit5Api
-    testRuntimeOnly project.deps.junit5Engine
+  testImplementation project.deps.assertJ
+  testImplementation project.deps.junit5Api
+  testRuntimeOnly project.deps.junit5Engine
 }
