--- a/settings.gradle
+++ b/settings.gradle
@@ -104,6 +104,7 @@ include ':api:api-version-v1'
 include ':api:api-webhook-v1'
 include ':app-server'
 include ':base'
+include ':build-platform'
 include ':commandline'
 include ':common'
 include ':config:config-api'
