--- a/db-support/db-migration/build.gradle
+++ b/db-support/db-migration/build.gradle
@@ -16,32 +16,36 @@
 
 apply plugin: 'java'
 
+configurations.all {
+  // Test containers depends on legacy junit, see https://github.com/testcontainers/testcontainers-java/issues/970
+  exclude group: 'junit'
+}
+
 dependencies {
-    annotationProcessor project.deps.lombok
+  annotationProcessor project.deps.lombok
 
-    implementation project.deps.commonsDbcp
-    implementation project.deps.commonsLang3
-    implementation project.deps.gson
-    implementation project.deps.springContext
-    implementation project.deps.jakartaAnnotation
+  implementation project.deps.commonsDbcp
+  implementation project.deps.commonsLang3
+  implementation project.deps.gson
+  implementation project.deps.springContext
+  implementation project.deps.jakartaAnnotation
 
-    implementation(project.deps.liquibase) {
-        // Not needed, according to https://github.com/liquibase/liquibase/issues/1866
-        exclude group: 'javax.xml.bind', module: 'jaxb-api'
+  implementation(project.deps.liquibase) {
+    // Not needed, according to https://github.com/liquibase/liquibase/issues/1866
+    exclude group: 'javax.xml.bind', module: 'jaxb-api'
 
-        // These dependencies used to be shaded, but are now directly added. However they seem only related to use of
-        // CSV or YAML snapshots/changelogs and/or offline storage which does not seem relevant to GoCD.
-        exclude group: 'org.yaml', module: 'snakeyaml'
-        exclude group: 'com.opencsv', module: 'opencsv'
-    }
+    // These dependencies used to be shaded, but are now directly added. However they seem only related to use of
+    // CSV or YAML snapshots/changelogs and/or offline storage which does not seem relevant to GoCD.
+    exclude group: 'org.yaml', module: 'snakeyaml'
+    exclude group: 'com.opencsv', module: 'opencsv'
+  }
 
-    testImplementation project.deps.testcontainersJdbc
+  testImplementation project.deps.junit5Api
+  testRuntimeOnly project.deps.junit5Engine
+  testImplementation project.deps.assertJ
+  testImplementation project.deps.assertJ_DB
 
-    testImplementation project.deps.assertJ
-    testImplementation project.deps.assertJ_DB
-
-    testImplementation project.deps.h2
-
-    testImplementation project.deps.junit5Api
-    testRuntimeOnly project.deps.junit5Engine
+  testImplementation project.deps.testcontainers
+  testImplementation project.deps.testcontainersJdbc
+  testImplementation project.deps.h2
 }
