--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -58,7 +58,7 @@ final Map<String, String> libraries = [
   gson                : 'com.google.code.gson:gson:2.9.0',
   guava               : 'com.google.guava:guava:31.1-jre',
   h2                  : 'com.h2database:h2:1.4.200',
-  hamcrest            : 'org.hamcrest:hamcrest-core:2.2',
+  hamcrest            : 'org.hamcrest:hamcrest:2.2',
   hibernate           : 'org.hibernate:hibernate-ehcache:3.6.10.Final',
   httpClientMock      : 'com.github.paweladamski:HttpClientMock:1.10.0',
   jacksonBom          : 'com.fasterxml.jackson:jackson-bom:2.13.2.20220328',
@@ -194,7 +194,6 @@ final Map<String, String> related = [
   apacheHttpMime          : "org.apache.httpcomponents:httpmime:${v.apacheHttpComponents}",
   aspectjWeaver           : "org.aspectj:aspectjweaver:${v.aspectj}",
   bouncyCastlePkix        : "org.bouncycastle:bcpkix-jdk15on:${v.bouncyCastle}",
-  hamcrestLibrary         : "org.hamcrest:hamcrest-library:${v.hamcrest}",
   jacksonCore             : 'com.fasterxml.jackson.core:jackson-core',
   jacksonDatabind         : 'com.fasterxml.jackson.core:jackson-databind',
   jaxbRuntime             : "org.glassfish.jaxb:jaxb-runtime:${v.jaxb}",
