Remove unnecessary thoughtworks.com references
Makes it easier to clean up other references later that do affect the end product.

--- a/plugin-infra/plugins/descriptor-aware-test-plugin/plugin.xml
+++ b/plugin-infra/plugins/descriptor-aware-test-plugin/plugin.xml
@@ -22,8 +22,8 @@
         <target-go-version>17.12</target-go-version>
         <description>Validates its own plugin descriptor</description>
         <vendor>
-            <name>ThoughtWorks GoCD Team</name>
-            <url>www.thoughtworks.com</url>
+            <name>GoCD Team</name>
+            <url>https://gocd.org</url>
         </vendor>
 	<target-os>
             <value>Linux</value>
