--- a/plugin-infra/plugins/exception-throwing-at-load-plugin/plugin.xml
+++ b/plugin-infra/plugins/exception-throwing-at-load-plugin/plugin.xml
@@ -22,8 +22,8 @@
         <target-go-version>17.12</target-go-version>
         <description>@Load methods of the extension points in the plugin throw error.</description>
         <vendor>
-            <name>ThoughtWorks GoCD Team</name>
-            <url>www.thoughtworks.com</url>
+            <name>GoCD Team</name>
+            <url>https://gocd.org</url>
         </vendor>
     </about>
 </go-plugin>
