--- a/plugin-infra/plugins/invalid-descriptor-plugin/plugin.xml
+++ b/plugin-infra/plugins/invalid-descriptor-plugin/plugin.xml
@@ -22,8 +22,8 @@
         <target-go-version>17.12</target-go-version>
         <description>Validates its own plugin descriptor</description>
         <vendor>
-            <url>www.thoughtworks.com</url>
-            <name>ThoughtWorks GoCD Team</name>
+            <url>https://gocd.org</url>
+            <name>GoCD Team</name>
         </vendor>
         <target-os>
             <value>Linux</value>
