--- a/plugin-infra/plugins/plugin-to-test-classloader/plugin.xml
+++ b/plugin-infra/plugins/plugin-to-test-classloader/plugin.xml
@@ -22,8 +22,8 @@
         <target-go-version>18.8</target-go-version>
         <description>DumbPluginThatRespondsWithClassloaderName</description>
         <vendor>
-            <name>ThoughtWorks GoCD Team</name>
-            <url>www.thoughtworks.com</url>
+            <name>GoCD Team</name>
+            <url>https://gocd.org</url>
         </vendor>
     </about>
 </go-plugin>
