--- a/plugin-infra/plugins/valid-plugin-with-multiple-extensions/plugin.xml
+++ b/plugin-infra/plugins/valid-plugin-with-multiple-extensions/plugin.xml
@@ -22,8 +22,8 @@
         <target-go-version>18.2</target-go-version>
         <description>Has multiple extensions.</description>
         <vendor>
-            <name>ThoughtWorks GoCD Team</name>
-            <url>www.thoughtworks.com</url>
+            <name>GoCD Team</name>
+            <url>https://gocd.org</url>
         </vendor>
     </about>
 </go-plugin>
