Use BOMs to manage Mockito dependencies
We also have a transitive dependency on mockito-inline via system-stubs, and using the BOM is a more consistent way to ensure all versions of Mockito libs are consistent.

--- a/agent-bootstrapper/build.gradle
+++ b/agent-bootstrapper/build.gradle
@@ -25,7 +25,7 @@ dependencies {
   testRuntimeOnly project.deps.bouncyCastle
   testRuntimeOnly project.deps.bouncyCastlePkix
   testImplementation project(':test:test-utils')
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   packagingOnly project(path: ':agent-launcher', configuration: 'fatJarConfig')
   extractedAtTopLevel project(':jar-class-loader')
   testImplementation project.deps.junit5
