--- a/jetty9/build.gradle
+++ b/jetty9/build.gradle
@@ -41,7 +41,7 @@ dependencies {
   testImplementation project(':test:test-utils')
   testImplementation project.deps.junit5
   testImplementation project.deps.junit5Params
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   testImplementation project.deps.mockitoJunit5
   testRuntimeOnly project.deps.junit5Engine
 }
