--- a/plugin-infra/go-plugin-domain/build.gradle
+++ b/plugin-infra/go-plugin-domain/build.gradle
@@ -26,5 +26,5 @@ dependencies {
   testImplementation project(':test:test-utils')
   testImplementation project.deps.junit5
   testRuntimeOnly project.deps.junit5Engine
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
 }
