--- a/agent-common/build.gradle
+++ b/agent-common/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 
   testRuntimeOnly project.deps.bouncyCastle
   testRuntimeOnly project.deps.bouncyCastlePkix
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   testImplementation project(':test:test-utils')
   testImplementation project.deps.junit5
   testRuntimeOnly project.deps.junit5Engine
