--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -82,7 +82,7 @@ final Map<String, String> libraries = [
   lombok              : 'org.projectlombok:lombok:1.18.24',
   mail                : 'jakarta.mail:jakarta.mail-api:2.1.0',
   mailSmtp            : 'org.eclipse.angus:smtp:1.0.0',
-  mockito             : 'org.mockito:mockito-core:4.7.0',
+  mockitoBom          : 'org.mockito:mockito-bom:4.7.0',
   mybatis             : 'org.mybatis:mybatis:3.5.10',
   mybatisSpring       : 'org.mybatis:mybatis-spring:2.0.7',
   mysql               : 'mysql:mysql-connector-java:8.0.30',
@@ -157,7 +157,6 @@ final Map<String, String> v = [
   logback             : versionOf(libraries.logback),
   mail                : versionOf(libraries.mail),
   mailSmtp            : versionOf(libraries.mailSmtp),
-  mockito             : versionOf(libraries.mockito),
   mybatis             : versionOf(libraries.mybatis),
   mybatisSpring       : versionOf(libraries.mybatisSpring),
   mysql               : versionOf(libraries.mysql),
@@ -212,7 +211,8 @@ final Map<String, String> related = [
   joltJsonUtils           : "com.bazaarvoice.jolt:json-utils:${v.jolt}",
   junit5Engine            : "org.junit.jupiter:junit-jupiter-engine:${v.junit5}",
   junit5Params            : "org.junit.jupiter:junit-jupiter-params:${v.junit5}",
-  mockitoJunit5           : "org.mockito:mockito-junit-jupiter:${v.mockito}",
+  mockitoCore             : "org.mockito:mockito-core",
+  mockitoJunit5           : "org.mockito:mockito-junit-jupiter",
   slf4jJcl                : "org.slf4j:jcl-over-slf4j:${v.slf4j}",
   slf4jJul                : "org.slf4j:jul-to-slf4j:${v.slf4j}",
   slf4jLog4j              : "org.slf4j:log4j-over-slf4j:${v.slf4j}",
