--- a/plugin-infra/go-plugin-api/build.gradle
+++ b/plugin-infra/go-plugin-api/build.gradle
@@ -23,7 +23,7 @@ dependencies {
   testImplementation project.deps.junit5
   testRuntimeOnly project.deps.junit5Engine
   testImplementation project.deps.hamcrest
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   testImplementation project(':test:test-utils')
 }
 
