--- a/plugin-infra/go-plugin-config-repo/build.gradle
+++ b/plugin-infra/go-plugin-config-repo/build.gradle
@@ -23,7 +23,7 @@ dependencies {
   implementation project.deps.gson
   annotationProcessor project.deps.lombok
   testImplementation project.deps.hamcrest
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   testImplementation project.deps.mockitoJunit5
   testImplementation project(':test:test-utils')
 }
