--- a/plugin-infra/go-plugin-infra/build.gradle
+++ b/plugin-infra/go-plugin-infra/build.gradle
@@ -32,7 +32,7 @@ dependencies {
   annotationProcessor project.deps.lombok
 
   testImplementation project.deps.springTestJunit5
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   testImplementation project.deps.mockitoJunit5
   testImplementation project(':test:test-utils')
   testImplementation project.deps.tinybundles
