--- a/plugin-infra/plugin-metadata-store/build.gradle
+++ b/plugin-infra/plugin-metadata-store/build.gradle
@@ -20,7 +20,7 @@ dependencies {
   implementation project.deps.commonsLang3
   implementation project(':plugin-infra:go-plugin-api')
   implementation project(':plugin-infra:go-plugin-domain')
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   testImplementation project(':test:test-utils')
   testImplementation project.deps.junit5
   testRuntimeOnly project.deps.junit5Engine
