--- a/rack_hack/build.gradle
+++ b/rack_hack/build.gradle
@@ -19,7 +19,7 @@ dependencies {
   implementation project(':app-server')
   providedAtPackageTime(project.deps.servletApi)
   testImplementation project(':test:test-utils')
-  testImplementation project.deps.mockito
+  testImplementation project.deps.mockitoCore
   testImplementation project.deps.junit5
   testRuntimeOnly project.deps.junit5Engine
 }
