Upgrade to Glassfish v3 JAXB reference impl via modern JAXB BOMs
We are running out-of-date JAXB runtimes currently. Migration to the BOMs allow us to track needed patches. To avoid clashes with Jakarta Activation v2 and Jakarta Mail, includes upgrade to v3 which mainly changes packages/namespaces per https://github.com/eclipse-ee4j/jaxb-ri/releases/tag/3.0.0-RI

Removes fastinfoset and staxex since these are now optional dependencies, and we don't appear to need them in our limited JAXB usage.

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -23,6 +23,7 @@ dependencies {
   // Use BOMs to control versions of dependencies for other projects, all of which consume 'base'.
   // This is following https://docs.gradle.org/current/userguide/platforms.html#sub:bom_import
   api enforcedPlatform(project.deps.jacksonBom)
+  api platform(project.deps.jaxbBom)
 
   api(project.deps.apacheAnt)  {
     transitive = false
