--- a/build.gradle
+++ b/build.gradle
@@ -667,6 +667,7 @@ subprojects {
     }
   }
 
+  project.configurations*.exclude(group: 'javax.xml.bind')
   project.configurations*.exclude(group: 'junit')
   project.configurations*.exclude(group: 'dom4j')
   project.configurations*.exclude(group: 'xalan')
