--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -124,7 +124,6 @@ task verifyJar(type: VerifyJarTask) {
   jarTask = fatJar
   expectedJars = [
     "lib": [
-      "FastInfoset-1.2.15.jar",
       "agent-${project.version}-classes.jar",
       "agent-common-${project.version}.jar",
       "animal-sniffer-annotations-1.9.jar",
@@ -161,16 +160,17 @@ task verifyJar(type: VerifyJarTask) {
       "httpclient-${project.versions.apacheHttpComponents}.jar",
       "httpcore-4.4.13.jar",
       "httpmime-${project.versions.apacheHttpComponents}.jar",
-      "istack-commons-runtime-3.0.7.jar",
+      "istack-commons-runtime-4.0.1.jar",
       "j2objc-annotations-1.3.jar",
       "jackson-annotations-2.13.2.jar",
       "jackson-core-2.13.2.jar",
       "jackson-databind-2.13.2.2.jar",
-      "javax.activation-api-1.2.0.jar",
+      "jakarta.activation-2.0.1.jar",
       "javax.annotation-api-${project.versions.javaxAnnotation}.jar",
       "javax.inject-1.jar",
       "javax.servlet-api-${project.versions.servletApi}.jar",
-      "jaxb-api-${project.versions.jaxb}.jar",
+      "jakarta.xml.bind-api-3.0.1.jar",
+      "jaxb-core-${project.versions.jaxb}.jar",
       "jaxb-runtime-${project.versions.jaxb}.jar",
       "jcl-over-slf4j-${project.versions.slf4j}.jar",
       "jcommander-${project.versions.jcommander}.jar",
@@ -197,7 +197,6 @@ task verifyJar(type: VerifyJarTask) {
       "spring-tx-${project.versions.spring}.jar",
       "spring-web-${project.versions.spring}.jar",
       "spring-webmvc-${project.versions.spring}.jar",
-      "stax-ex-1.8.jar",
       "txw2-${project.versions.jaxb}.jar",
       "util-${project.version}.jar"
     ]
