--- a/db-support/db-migration/build.gradle
+++ b/db-support/db-migration/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     implementation project.deps.springContext
     implementation project.deps.javaxAnnotation
 
-    implementation project.deps.liquibase
-    implementation project.deps.jaxb
+    implementation(project.deps.liquibase) {
+        // Not needed, according to https://github.com/liquibase/liquibase/issues/1866
+        exclude group: 'javax.xml.bind', module: 'jaxb-api'
+    }
 
     testImplementation project.deps.testcontainersJdbc
 
