--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -64,7 +64,7 @@ final Map<String, String> libraries = [
   jacksonBom          : 'com.fasterxml.jackson:jackson-bom:2.13.2.20220328',
   javaAssist          : 'javassist:javassist:3.12.1.GA',
   javaxAnnotation     : 'javax.annotation:javax.annotation-api:1.3.2',
-  jaxb                : 'javax.xml.bind:jaxb-api:2.3.1',
+  jaxbBom             : 'org.glassfish.jaxb:jaxb-bom:3.0.2',
   jaxen               : 'jaxen:jaxen:1.2.0',
   jcommander          : 'com.beust:jcommander:1.82',
   jdom                : 'org.jdom:jdom2:2.0.6.1',
@@ -144,7 +144,7 @@ final Map<String, String> v = [
   hibernate           : versionOf(libraries.hibernate),
   javaAssist          : versionOf(libraries.javaAssist),
   javaxAnnotation     : versionOf(libraries.javaxAnnotation),
-  jaxb                : versionOf(libraries.jaxb),
+  jaxb                : versionOf(libraries.jaxbBom),
   jaxen               : versionOf(libraries.jaxen),
   jcommander          : versionOf(libraries.jcommander),
   jdom                : versionOf(libraries.jdom),
@@ -196,7 +196,8 @@ final Map<String, String> related = [
   bouncyCastlePkix        : "org.bouncycastle:bcpkix-jdk15on:${v.bouncyCastle}",
   jacksonCore             : 'com.fasterxml.jackson.core:jackson-core',
   jacksonDatabind         : 'com.fasterxml.jackson.core:jackson-databind',
-  jaxbRuntime             : "org.glassfish.jaxb:jaxb-runtime:${v.jaxb}",
+  jaxbApi                 : "jakarta.xml.bind:jakarta.xml.bind-api",
+  jaxbRuntime             : "org.glassfish.jaxb:jaxb-runtime",
   jettyDeploy             : "org.eclipse.jetty:jetty-deploy:${v.jetty}",
   jettyJmx                : "org.eclipse.jetty:jetty-jmx:${v.jetty}",
   jettyPlus               : "org.eclipse.jetty:jetty-plus:${v.jetty}",
