--- a/plugin-infra/go-plugin-infra/build.gradle
+++ b/plugin-infra/go-plugin-infra/build.gradle
@@ -26,7 +26,7 @@ dependencies {
   implementation project(':plugin-infra:go-plugin-api')
   implementation project(':plugin-infra:go-plugin-activator')
   implementation project.deps.commonsCollections4
-  api project.deps.jaxb
+  api project.deps.jaxbApi
   api project.deps.jaxbRuntime
 
   annotationProcessor project.deps.lombok
