--- a/server/build.gradle
+++ b/server/build.gradle
@@ -796,7 +796,6 @@ task verifyWar(type: VerifyJarTask) {
     "WEB-INF/lib": (
       ((project(':api').subprojects + project(':spark').subprojects).collect { eachProject -> eachProject.jar.archiveFile.get().asFile.name })
         + [
-        "FastInfoset-1.2.15.jar",
         "JavaEWAH-1.1.13.jar",
         "activemq-broker-${project.versions.activeMQ}.jar",
         "activemq-client-${project.versions.activeMQ}.jar",
@@ -860,18 +859,18 @@ task verifyWar(type: VerifyJarTask) {
         "httpclient-${project.versions.apacheHttpComponents}.jar",
         "httpcore-4.4.13.jar",
         "httpmime-${project.versions.apacheHttpComponents}.jar",
-        "istack-commons-runtime-3.0.7.jar",
+        "istack-commons-runtime-4.0.1.jar",
         "j2objc-annotations-1.3.jar",
         "jackson-annotations-2.13.2.jar",
         "jackson-core-2.13.2.jar",
         "jackson-databind-2.13.2.2.jar",
         "jakarta.activation-2.0.1.jar",
         "javassist-${project.versions.javaAssist}.jar",
-        "javax.activation-api-1.2.0.jar",
         "javax.annotation-api-${project.versions.javaxAnnotation}.jar",
         "javax.inject-1.jar",
         "javax.servlet-api-${project.versions.servletApi}.jar",
-        "jaxb-api-${project.versions.jaxb}.jar",
+        "jakarta.xml.bind-api-3.0.1.jar",
+        "jaxb-core-${project.versions.jaxb}.jar",
         "jaxb-runtime-${project.versions.jaxb}.jar",
         "jaxen-${project.versions.jaxen}.jar",
         "jcl-over-slf4j-${project.versions.slf4j}.jar",
@@ -916,7 +915,6 @@ task verifyWar(type: VerifyJarTask) {
         "spring-tx-${project.versions.spring}.jar",
         "spring-web-${project.versions.spring}.jar",
         "spring-webmvc-${project.versions.spring}.jar",
-        "stax-ex-1.8.jar",
         "token-bucket-${project.versions.tokenBucket}.jar",
         "txw2-${project.versions.jaxb}.jar",
         "urlrewritefilter-${project.versions.urlrewrite}.jar",
